--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
-/* Estilos globales */
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background-color: #f8f8f8;
-}
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AmistApp</title>
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
